fixed NutriAl image on mobile

--- a/src/css/projectspage.css
+++ b/src/css/projectspage.css
@@ -125,6 +125,9 @@ hr {
 		flex-direction: column;
 		align-items: start;
 	}
+	.project-img-container-mobile img {
+		height: 200px;
+	}
 }
 @media only screen and (max-width: 1024px) {
 	.project-img-container-mobile {
